# temporal-rs

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
crates/temporal/: Cargo.toml
crates/temporal-core/: Cargo.toml
crates/temporal-core/src/: client.rs  error.rs  lib.rs  runtime.rs  worker.rs
crates/temporal-macros/: Cargo.toml
crates/temporal-macros/src/: activity.rs  lib.rs  workflow.rs
crates/temporal-testing/: Cargo.toml
crates/temporal-testing/src/: containers.rs  fixtures.rs  lib.rs
crates/temporal/src/: activity.rs  client.rs  error.rs  lib.rs  worker.rs  workflow.rs  workflow_machine.rs
crates/temporal/tests/: integration_test.rs
examples/: activity_worker.rs
scripts/: setup-hooks.sh
